# LETI

./: .gitignore
shapes/: CMakeLists.txt  SquareS.cpp  SquareS.h  SquareT.cpp  SquareT.h  iterator.h  list.h  listEmptyError.h  listException.h  listIteratorException.h  main.cpp  shapes.cpp  shapes.h  square.cpp  square.h  text.cpp  text.h
